[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/Gotham_20.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/GUI/Grey.tres" type="Texture" id=2]
[ext_resource path="res://assets/GUI/TurnStats/TurnName.gd" type="Script" id=3]
[ext_resource path="res://assets/GUI/TurnStats/ChartsUI.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/Gotham_16.tres" type="DynamicFont" id=5]

[node name="ChartsUI" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -300.0
margin_right = 500.0
margin_bottom = 300.0
script = ExtResource( 4 )

[node name="N" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="M" type="MarginContainer" parent="N"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 20.0
margin_right = -50.0
margin_bottom = -20.0

[node name="V" type="VBoxContainer" parent="N/M"]
margin_right = 900.0
margin_bottom = 560.0
custom_constants/separation = 20

[node name="H1" type="HBoxContainer" parent="N/M/V"]
margin_right = 900.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 75 )

[node name="LMargin" type="Control" parent="N/M/V/H1"]
margin_right = 246.0
margin_bottom = 75.0
size_flags_horizontal = 3

[node name="TurnName" type="Label" parent="N/M/V/H1"]
margin_left = 250.0
margin_top = 12.0
margin_right = 650.0
margin_bottom = 62.0
rect_min_size = Vector2( 400, 50 )
custom_fonts/font = ExtResource( 1 )
text = "Stats go here"
align = 1
valign = 1
script = ExtResource( 3 )

[node name="RMargin" type="Control" parent="N/M/V/H1"]
margin_left = 654.0
margin_right = 900.0
margin_bottom = 75.0
size_flags_horizontal = 3

[node name="H2" type="HBoxContainer" parent="N/M/V"]
margin_top = 95.0
margin_right = 900.0
margin_bottom = 145.0
rect_min_size = Vector2( 0, 50 )

[node name="LMargin" type="Control" parent="N/M/V/H2"]
margin_right = 196.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="CarbonButton" type="Button" parent="N/M/V/H2"]
margin_left = 200.0
margin_right = 700.0
margin_bottom = 50.0
rect_min_size = Vector2( 500, 50 )
custom_fonts/font = ExtResource( 5 )
text = "Carbon"

[node name="RMargin" type="Control" parent="N/M/V/H2"]
margin_left = 704.0
margin_right = 900.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="H3" type="HBoxContainer" parent="N/M/V"]
margin_top = 165.0
margin_right = 900.0
margin_bottom = 215.0
rect_min_size = Vector2( 0, 50 )

[node name="LMargin" type="Control" parent="N/M/V/H3"]
margin_right = 196.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="WaterButton" type="Button" parent="N/M/V/H3"]
margin_left = 200.0
margin_right = 700.0
margin_bottom = 50.0
rect_min_size = Vector2( 500, 50 )
custom_fonts/font = ExtResource( 5 )
text = "Water"

[node name="RMargin" type="Control" parent="N/M/V/H3"]
margin_left = 704.0
margin_right = 900.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="H4" type="HBoxContainer" parent="N/M/V"]
margin_top = 235.0
margin_right = 900.0
margin_bottom = 285.0
rect_min_size = Vector2( 0, 50 )

[node name="LMargin" type="Control" parent="N/M/V/H4"]
margin_right = 196.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="FoodButton" type="Button" parent="N/M/V/H4"]
margin_left = 200.0
margin_right = 700.0
margin_bottom = 50.0
rect_min_size = Vector2( 500, 50 )
custom_fonts/font = ExtResource( 5 )
text = "Food"

[node name="RMargin" type="Control" parent="N/M/V/H4"]
margin_left = 704.0
margin_right = 900.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="H5" type="HBoxContainer" parent="N/M/V"]
margin_top = 305.0
margin_right = 900.0
margin_bottom = 355.0
rect_min_size = Vector2( 0, 50 )

[node name="LMargin" type="Control" parent="N/M/V/H5"]
margin_right = 196.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="EnergyButton" type="Button" parent="N/M/V/H5"]
margin_left = 200.0
margin_right = 700.0
margin_bottom = 50.0
rect_min_size = Vector2( 500, 50 )
custom_fonts/font = ExtResource( 5 )
text = "Energy"

[node name="RMargin" type="Control" parent="N/M/V/H5"]
margin_left = 704.0
margin_right = 900.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="H6" type="HBoxContainer" parent="N/M/V"]
margin_top = 375.0
margin_right = 900.0
margin_bottom = 425.0
rect_min_size = Vector2( 0, 50 )

[node name="LMargin" type="Control" parent="N/M/V/H6"]
margin_right = 196.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="VibrancyButton" type="Button" parent="N/M/V/H6"]
margin_left = 200.0
margin_right = 700.0
margin_bottom = 50.0
rect_min_size = Vector2( 500, 50 )
custom_fonts/font = ExtResource( 5 )
text = "Vibrancy"

[node name="RMargin" type="Control" parent="N/M/V/H6"]
margin_left = 704.0
margin_right = 900.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="Margin4" type="Control" parent="N/M/V"]
margin_top = 445.0
margin_right = 900.0
margin_bottom = 455.0
rect_min_size = Vector2( 0, 10 )

[node name="HClose" type="HBoxContainer" parent="N/M/V"]
margin_top = 475.0
margin_right = 900.0
margin_bottom = 525.0
rect_min_size = Vector2( 0, 50 )

[node name="LMargin" type="Control" parent="N/M/V/HClose"]
margin_right = 346.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="N/M/V/HClose"]
margin_left = 350.0
margin_right = 550.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
custom_fonts/font = ExtResource( 1 )
text = "Close"
clip_text = true

[node name="RMargin" type="Control" parent="N/M/V/HClose"]
margin_left = 554.0
margin_right = 900.0
margin_bottom = 50.0
size_flags_horizontal = 3

[connection signal="button_up" from="N/M/V/H2/CarbonButton" to="." method="_on_CarbonButton_button_up"]
[connection signal="button_up" from="N/M/V/H3/WaterButton" to="." method="_on_WaterButton_button_up"]
[connection signal="button_up" from="N/M/V/H4/FoodButton" to="." method="_on_FoodButton_button_up"]
[connection signal="button_up" from="N/M/V/H5/EnergyButton" to="." method="_on_EnergyButton_button_up"]
[connection signal="button_up" from="N/M/V/H6/VibrancyButton" to="." method="_on_VibrancyButton_button_up"]
[connection signal="pressed" from="N/M/V/HClose/CloseButton" to="." method="_on_CloseButton_pressed"]
